# SPP-UCP

./: .gitignore  CMakeLists.txt  README.md  build_space_packet.py  recv_space_packet_udp.py  send_space_packet_udp.py  setup.py  sp_wrapper.c  space_packet_module.py  space_packet_sender  space_packet_sender.c
python/: send_space_packet_udp.py
python/space_packet_module/: setup.py
python/space_packet_module/space_packet_module/: spp_sender.py
python/tests/: test_send_recv.py
scripts/: configure_spp.sh
space_packet_module/space_packet_module/: __init__.py  spp_sender.py
src/: CMakeLists.txt  space_packet_receiver.c  space_packet_receiver.h  space_packet_sender.c  space_packet_sender.h  spp_config.h.in  spprx  spprx.c  spprxfunc.c  spptx  spptx.c  spptxfunc.c  spptxpipe.c
tests/: test_basic_api.c  test_error_cases.c  test_shared_api.c
